--- a/2/index.html
+++ b/2/index.html
@@ -4,16 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="styles/styles.css">
     <base href="https://htmlacademy-htmlcss.github.io/1314187-sedona-35/2/">
 </head>
 
   <body class="main-page">
     <header>
       <nav class="main-nav">
-        <a class="logo-sedona">
-          <img src="images/logo-sedona-main.svg" width="140" height="70" alt="Логотип Седоны">
-        </a>
+        <a class="logo"><img src="#" alt="Логотип Седоны"></a>
         <a>Главная</a>
         <a href="#">О седоне</a>
         <a href="catalog.html">Гостиницы</a>
@@ -27,7 +24,6 @@
       <h1 class="visually-hidden">Туристический город Седона в штате Аризона</h1>
 
       <section class="hero">
-        <img src="images/hero.png" width="1200" height="485" alt="Фото каньона в Седоне">
         <h2>Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
@@ -39,7 +35,6 @@
             <h3>Настоящий городок</h3>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
-          <img src="images/features-1-truly-town.jpg" width="800" height="384" alt="Фото города Седоны">
         </div>
 
         <div class="features-list multiple">
@@ -57,12 +52,11 @@
           </div>
         </div>
 
-        <div class="features-list alone reverse">
+        <div class="features-list alone">
           <div>
             <h3>Там есть мост дьявола</h3>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
-          <img src="images/features-2-devils-bridge.jpg" width="800" height="384" alt="Фото Моста Дьявола">
         </div>
 
         <div class="features-list multiple">
@@ -83,8 +77,7 @@
 
       <section class="search">
         <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в
-          Седоне</p>
+        <p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button type="button">Поиск гостиницы в Седоне</button>
       </section>
     </main>
@@ -101,10 +94,15 @@
       <a class="social telegram" href="#">Telegram</a>
       <a class="social youtube" href="#">YouTube</a>
       <a class="phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a class="logo-htmlacademy" href="#">
-        <img src="images/logo-htmlacademy.svg" width="115" height="33" alt="Логотип HtmlAcademy">
-      </a>
+      <a class="logo" href="#">HtmlAcademy</a>
     </footer>
   </body>
 
 </html>
+
+<!--
+  <img src="#" alt="Описание картинки.">
+  class="visually-hidden"
+  <a href="catalog.html"> или <a href="#"></a>
+  Для тестирования правильности работы форм можно использовать адрес https://echo.htmlacademy.ru/
+-->
