--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,9 @@
         </div>
 
         <div class="main-nav-right">
-          <button class="search-button" type="button"> <span class="visually-hidden">Поиск</span> </button>
+          <button class="search-button" type="button">
+            <span class="visually-hidden">Поиск</span>
+          </button>
           <button class="favorite" type="button">
             <span class="visually-hidden">Избранное</span>
             <span class="notifications">12</span></button>
@@ -199,12 +201,14 @@
         <button class="close-modal-window" type="reset"><span class="visually-hidden">Закрыть</span></button>
         <fieldset class="date-from">
           <h3>Дата заезда:</h3>
-          <input type="date">
+          <!-- <input type="date" placeholder="Укажите дату"> -->
+          <input type="text" name="date-from" placeholder="Укажите дату" value="27 апреля 2020" required>
           <span class="error">Мы не можем отправить вас в прошлое.</span>
         </fieldset>
         <fieldset class="date-to">
           <h3>Дата выезда:</h3>
-          <input type="date">
+          <!-- <input type="date" placeholder="Укажите дату"> -->
+          <input type="text" name="date-to" placeholder="Укажите дату" value="1 сентября 2021" required>
           <span class="verification">На эти даты есть свободные номера. Пока есть.</span>
         </fieldset>
         <fieldset class="count-adults">
@@ -216,7 +220,7 @@
                 <use href="#icon-minus" />
               </svg>
             </button>
-            <input type="number" min="1" max="5" value="2">
+            <input type="number" name="count-adults" min="1" max="5" value="2" required>
             <button class="plus" type="button">
               <span class="visually-hidden">Увеличить число</span>
               <svg width="20px" height="20px" viewBox="0 0 20 20">
@@ -226,11 +230,14 @@
           </div>
         </fieldset>
         <fieldset class="count-children">
-          <h3>Дети:</h3>
-          <span class="info" tabindex="0"><span class="visually-hidden">Подробнее...</span></span>
-          <span class="tooltip">
-            Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет.
-            Дети до 6 лет размещаются бесплатно.</span>
+          <div class="count-children-lable">
+            <h3>Дети:</h3>
+            <span class="tooltip">
+              <span class="info" tabindex="0"><span class="visually-hidden">Подробнее...</span></span>
+              <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет.
+                Дети до 6 лет размещаются бесплатно.</span>
+            </span>
+          </div>
           <div class="input-group">
             <button class="minus" type="button">
               <span class="visually-hidden">Уменьшить число</span>
@@ -238,7 +245,7 @@
                 <use href="#icon-minus" />
               </svg>
             </button>
-            <input type="number" min="0" max="5" value="2">
+            <input type="number" name="count-children" min="0" max="5" value="2" required>
             <button class="plus" type="button">
               <span class="visually-hidden">Увеличить число</span>
               <svg width="20px" height="20px" viewBox="0 0 20 20">
